--- a/src/Landing/Landing.css
+++ b/src/Landing/Landing.css
@@ -1,4 +1,4 @@
-.landing{
+.landing {
     display: flex;
     margin: 0;
 }
@@ -6,11 +6,12 @@
 
 /* Section Left */
 
-.landing-left{
-    width:70%;
+.landing-left {
+    width: 70%;
     height: 100vh;
 }
-.tipify-container{
+
+.tipify-container {
     padding: 30px 50px 30px 50px;
     background-color: #F5F5F5;
     font-family: 'bm';
@@ -18,7 +19,8 @@
     margin: 80px;
     border-radius: 10px;
 }
-.button-v{
+
+.button-v {
     padding-left: 6px;
     width: 100%;
     height: 35px;
@@ -29,7 +31,8 @@
     margin-top: 10px;
     margin-bottom: 10px;
 }
-.tipify-container input{
+
+.tipify-container input {
     padding-left: 6px;
     width: 100%;
     height: 35px;
@@ -40,29 +43,37 @@
     margin-top: 10px;
     margin-bottom: 10px;
 }
-.item-c{
+
+.item-c {
     width: 100%;
     display: flex;
     justify-content: space-between;
 }
-.text-size,.tooltip-width,.padding,.arrow-width,.arrow-height,.corner-radius{
+
+.text-size,
+.tooltip-width,
+.padding,
+.arrow-width,
+.arrow-height,
+.corner-radius {
     width: 45%;
 }
 
 /* Section Right */
 
-.landing-right{
-    width:30%;
+.landing-right {
+    width: 30%;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.outer-screen{
+
+.outer-screen {
     background-color: #000000;
     height: 700px;
     width: 350px;
-    border-radius: 20px;    
+    border-radius: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -73,43 +84,71 @@
     height: 670px;
     width: 320px;
     border-radius: 20px;
-    position: relative; 
-  }
-  
-  .inner-screen button {
+    position: relative;
+}
+
+.inner-screen button {
     font-family: 'bm';
     font-size: 20px;
     margin: 10px;
     padding: 5px 10px 5px 10px;
     border-radius: 5px;
     border: none;
-  }
-  
-  .button-2 {
+}
+
+.button-2 {
     position: absolute;
     top: 0;
     right: 0;
-  }
-  
-  
-  .button-3 {
+}
+
+
+.button-3 {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-  }
-  
-  .button-4 {
+}
+
+.button-4 {
     position: absolute;
     bottom: 0;
     left: 0;
-  }
-  
-  .button-5 {
+}
+
+.button-5 {
     position: absolute;
     bottom: 0;
     right: 0;
-  }
-  @media (max-width:450px) {
-    
-  }
+}
+
+@media (max-width:450px) {
+    .landing {
+        display: block;
+    }
+
+    .tipify-container {
+        font-size: 18px;
+        padding: 15px;
+        margin: 25px;
+    }
+
+    .landing-left {
+        width: 100%;
+        height: 100%;
+    }
+
+    .landing-right {
+        width: 100%;
+        height: 100%;
+        margin-bottom: 20px;
+    }
+
+    .tipify-container input {
+        font-size: 16px;
+    }
+
+    .button-v {
+        font-size: 16px;
+    }
+}
